# simtools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
ba_tools/: simulation_chain.ipynb
simtools/: example_config.toml  version.py
simtools/data/: dataset.py
simtools/scripts/: simulate_dataset.py
simtools/simulations/: __init__.py  dataset_simulation.py  simulation_chain.py
