# This file was adapted from https://github.com/radionets-project/pyvisgen/blob/main/pyproject.toml
# pyvisgen is licensed under MIT License
#
# MIT License
#
# Copyright (c) 2021 radionets-project
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simtools"
dynamic = ["version"]
description = "Simplify simulating radio interferometric images and datasets using pyvisgen or CASA."
readme = "README.md"
authors = [{ name = "Tom Groß" }]
maintainers = [{ name = "Tom Groß", email = "tom.gross@tu-dortmund.de" }]
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 4 - Beta",
]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "pyvisgen",
  "radiotools",
  "radio_stats",
  "casatools",
  "casatasks",
  "casadata",
  "astropy",
  "h5py",
  "toml",
  "tqdm",
  "pandas",
  "pre-commit",
]

[project.scripts]
simtools-simulate = "simtools.scripts.simulate_dataset:main"

[tool.setuptools_scm]
write_to = "simtools/_version.py"

[tool.setuptools.packages.find]
where = ["."]
