# This file was adapted from:
#   - pyvisgen (https://github.com/radionets-project/pyvisgen/blob/main/pyproject.toml)
#     Originally licensed under MIT License. Copyright (c) 2021 radionets-project.

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simtools"
dynamic = ["version"]
description = "Simplify simulating radio interferometric images and datasets using pyvisgen or CASA."
readme = "README.md"
authors = [{ name = "Tom Groß" }]
maintainers = [{ name = "Tom Groß", email = "tom.gross@tu-dortmund.de" }]
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 4 - Beta",
]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "pyvisgen",
  "radiotools",
  "radio_stats",
  "casatools",
  "casatasks",
  "casadata",
  "astropy",
  "h5py",
  "toml",
  "tqdm",
  "pandas",
  "pre-commit",
]

[project.scripts]
simtools-simulate = "simtools.scripts.simulate_dataset:main"

[tool.setuptools_scm]
write_to = "simtools/_version.py"

[tool.setuptools.packages.find]
where = ["."]
